reworked user register
